@@ -29,6 +29,7 @@ import java.nio.channels.SocketChannel;
 import java.util.*;
 
 import org.gudy.azureus2.core3.config.*;
+import org.gudy.azureus2.core3.logging.LGLogger;
 import org.gudy.azureus2.core3.util.*;
 
 
@@ -180,7 +181,7 @@ public class IncomingConnectionManager {
           }
           
           if( match_buffers.isEmpty() ) {  //no match registrations, just close
-            System.out.println( "Incoming connection from [" +channel.socket().getInetAddress().getHostAddress()+ "] dropped because zero routing handlers registered" );
+            System.out.println( "Incoming TCP connection from [" +channel.socket().getInetAddress().getHostAddress()+ ":" +channel.socket().getPort()+ "] dropped because zero routing handlers registered" );
             NetworkManager.getSingleton().getConnectDisconnectManager().closeConnection( channel );
             return;
           }
@@ -225,19 +226,19 @@ public class IncomingConnectionManager {
                   if( listener == null ) {  //no match found
                     if( ic.buffer.position() >= max_match_buffer_size ) { //we've already read in enough bytes to have compared against all potential match buffers
                       ic.buffer.flip();
-                      System.out.println( "Incoming stream from [" +sc.socket().getInetAddress().getHostAddress()+ "] does not match any known buffer pattern: " + ByteFormatter.nicePrint( ic.buffer.array() ) );
+                      System.out.println( "Incoming TCP stream from [" +sc.socket().getInetAddress().getHostAddress()+ ":" +sc.socket().getPort()+ "] does not match any known byte pattern: " + ByteFormatter.nicePrint( ic.buffer.array() ) );
                       removeConnection( ic, true );
                     }
                   }
                   else {  //match found!
                     ic.buffer.flip();
-                    System.out.println( "Incoming stream from [" +sc.socket().getInetAddress().getHostAddress()+ "] recognized as known buffer pattern: " + ByteFormatter.nicePrint( ic.buffer.array() ) );
+                    LGLogger.log( "Incoming TCP stream from [" +sc.socket().getInetAddress().getHostAddress()+ ":" +sc.socket().getPort()+ "] recognized as known byte pattern: " + ByteFormatter.nicePrint( ic.buffer.array() ) );
                     removeConnection( ic, false );
                     listener.connectionMatched( sc, ic.buffer );
                   }
                 }
                 catch( Throwable t ) {
-                  System.out.println( "Exception during socket read [" +sc+ "]: " +t.getMessage() );
+                  System.out.println( "Incoming TCP connection [" +ic.channel+ "] socket read exception: " +t.getMessage() );
                   removeConnection( ic, true );
                 }
                 
@@ -246,7 +247,6 @@ public class IncomingConnectionManager {
               
               //FAILURE
               public void selectFailure( VirtualChannelSelector selector, SocketChannel sc, Object attachment, Throwable msg ) {
-                System.out.println( "selectFailure::" );
                 Debug.out( msg );
                 removeConnection( ic, true );
               }
@@ -288,6 +288,7 @@ public class IncomingConnectionManager {
     
       //remember original values for later restore
       int orig_position = to_check.position();
+      int orig_limit = to_check.limit();
       
       //rewind
       to_check.position( 0 );
@@ -308,8 +309,9 @@ public class IncomingConnectionManager {
         }
       }
 
-      //restore original values
+      //restore original values in case the checks changed them
       to_check.position( orig_position );
+      to_check.limit( orig_limit );
       
       return listener;
       
@@ -332,7 +334,7 @@ public class IncomingConnectionManager {
             ic.last_read_time = now;
           }
           else if( now - ic.last_read_time > 10*1000 ) {  //10s read timeout
-            System.out.println( "Incoming connection [" +ic.channel+ "] forcibly timed out due to socket read inactivity [" +ic.buffer.position()+ " bytes read]" );
+            System.out.println( "Incoming TCP connection [" +ic.channel+ "] forcibly timed out due to socket read inactivity [" +ic.buffer.position()+ " bytes read]" );
             if( to_close == null )  to_close = new ArrayList();
             to_close.add( ic );
           }
@@ -342,7 +344,7 @@ public class IncomingConnectionManager {
             ic.initial_connect_time = now;
           }
           else if( now - ic.initial_connect_time > 60*1000 ) {  //60s connect timeout
-            System.out.println( "Incoming connection [" +ic.channel+ "] forcibly timed out after 60sec due to socket inactivity [" +ic.buffer.position()+ " bytes read]" );
+            System.out.println( "Incoming TCP connection [" +ic.channel+ "] forcibly timed out after 60sec due to socket inactivity [" +ic.buffer.position()+ " bytes read]" );
             if( to_close == null )  to_close = new ArrayList();
             to_close.add( ic );
           }
