@@ -21,90 +21,141 @@
  
 package org.gudy.azureus2.core3.ipchecker.natchecker;
 
-import java.net.InetAddress;
-import java.net.ServerSocket;
-import java.net.Socket;
-import java.io.IOException;
+import java.net.*;
+import java.nio.ByteBuffer;
+import java.nio.channels.SocketChannel;
 
 import org.gudy.azureus2.core3.config.*;
+import org.gudy.azureus2.core3.logging.LGLogger;
 import org.gudy.azureus2.core3.util.*;
 
-/**
- * @author Olivier
- * 
- */
-public class NatCheckerServer extends AEThread{
-    
-    private String check;
-    private ServerSocket server;
-    private boolean valid = false;
-    private boolean isAlreadyListening = false;
-    
-    private boolean bContinue = true;
-    
-    public NatCheckerServer(int _port, String _check) {     
-      super("Nat Checker Server");
-      try {
-        check = _check;
-        
-        String bind_ip 	= COConfigurationManager.getStringParameter("Bind IP", "");
+import com.aelitis.azureus.core.networkmanager.*;
 
-        if ( bind_ip.length() < 7 ){
-        	
-        	server = new ServerSocket(_port);
-        	
-        }else{
-        	
-        	server = new ServerSocket( _port, 8, InetAddress.getByName(bind_ip));
-        }
+
+
+/**
+ * 
+ *
+ */
+public class NatCheckerServer extends AEThread {
+    private static final String incoming_handshake = "NATCHECK_HANDSHAKE";
+  
+    private final String check;
+    private ServerSocket server;
+    private boolean valid = false;    
+    private boolean bContinue = true;
+    private final boolean use_incoming_router;
+    private IncomingConnectionManager.ByteMatcher matcher;
+    
+    
+    public NatCheckerServer(int _port, final String _check) {     
+      super("Nat Checker Server");
+      
+      this.check = _check;
+      use_incoming_router = _port == COConfigurationManager.getIntParameter("TCP.Listen.Port");
+      
+      if( use_incoming_router ) {
+        //test port and currently-configured listening port are the same,
+        //so register for incoming connection routing
+        
+        matcher = new IncomingConnectionManager.ByteMatcher() {
+          public int size() {  return incoming_handshake.getBytes().length;  }
+
+          public boolean matches( ByteBuffer to_compare ) {             
+            int old_limit = to_compare.limit();
+            to_compare.limit( to_compare.position() + size() );
+            boolean matches = to_compare.equals( ByteBuffer.wrap( incoming_handshake.getBytes() ) );
+            to_compare.limit( old_limit );  //restore buffer structure
+            return matches;
+          }
+        };
+        
+        NetworkManager.getSingleton().getIncomingConnectionManager().registerMatchBytes( 
+            matcher,
+            new IncomingConnectionManager.MatchListener() {
+              public void connectionMatched( SocketChannel channel, ByteBuffer read_so_far ) {
+                LGLogger.log( "Incoming connection from [" +channel+ "] successfully routed to NAT CHECKER" );
+                
+                try{
+                  ByteBuffer msg = ByteBuffer.wrap( check.getBytes() );
+                  while( msg.hasRemaining() ) {
+                    channel.write( msg );
+                    Thread.sleep( 20 );
+                  }
+                }
+                catch( Throwable t ) {
+                  Debug.out( "Nat check write failed", t );
+                }
+                
+                NetworkManager.getSingleton().getConnectDisconnectManager().closeConnection( channel ); 
+              }
+            }
+        );
         
         valid = true;
-      
-      } catch (IOException ioe) {
-      	int confPort = COConfigurationManager.getIntParameter("TCP.Listen.Port", 6881);
-      	if (_port == confPort) {
-            //test port and currently-configured listening port
-            //are the same, so testing not possible
-            valid = false;
-            isAlreadyListening = true;
-      	}
-        
-      } catch(Exception e) {
-        //Do nothing;
-      }      
+        LGLogger.log( "NAT tester using central routing for server socket" );
+      }
+      else {  //different port than already listening on, start new listen server
+        try {
+          String bind_ip  = COConfigurationManager.getStringParameter("Bind IP", "");
+
+          if ( bind_ip.length() < 7 ){
+            server = new ServerSocket( _port );
+            LGLogger.log( "NAT tester server socket bound to port " +_port );
+          }
+          else{
+            server = new ServerSocket( _port, 8, InetAddress.getByName(bind_ip) );
+            LGLogger.log( "NAT tester server socket bound to " +bind_ip+ ":" +_port );
+          }
+          
+          valid = true;
+        }
+        catch(Exception e) {  valid = false;  }      
+      }
     }
+    
+    
     
     public void runSupport() {
       while(bContinue) {
         try {
-          if (isAlreadyListening) {
-            //already open, just NOOP loop sleep
+          if (use_incoming_router) {
+            //just NOOP loop sleep while waiting for routing
             Thread.sleep(20);
           }
           else {
             //listen for accept
           	Socket sck = server.accept();
-          	sck.getOutputStream().write(check.getBytes());
+          	sck.getOutputStream().write( check.getBytes() );
+            sck.close();
           }
         } catch(Exception e) {
-        	Debug.printStackTrace(e);
+        	//Debug.printStackTrace(e);
         	bContinue = false;
         }
       }
     }
+      
+    
     
     public boolean isValid() {
       return this.valid;
     }
     
-    public boolean isAlreadyListening() { return this.isAlreadyListening; }
     
     public void stopIt() {
-      try {
       bContinue = false;
-      if(server != null && server.isBound())
-        server.close();
-      } catch(Exception e) {
+      
+      if( use_incoming_router ) {
+        NetworkManager.getSingleton().getIncomingConnectionManager().deregisterMatchBytes( matcher );
+      }
+      else if( server != null ) {
+        try {
+          server.close();
+        }
+        catch(Exception e) { /*nothing*/ }
       }
     }
+    
+    
   }
