@@ -768,7 +768,6 @@ GeneralView.label.hash.tooltip=Click to copy the hash to the clipboard
 ConfigView.section.tracker.maxpeersreturned=Maximum peers returned [0: unlimited]
 ConfigView.label.serverport=Incoming TCP listen port
 configureWizard.nat.server.tcp_listen_port=Incoming TCP Listen Port
-configureWizard.nat.already_listening=Unable to test because listening port is already\nin use. Please stop all active torrents and restart Azureus.\nThen run this test again.
 ConfigView.section.sharing=Sharing
 ConfigView.section.sharing.usessl=Use SSL for shared resources (requires Tracker configuration)
 ConfigView.section.style.dropdiraction=Drag and Drop action for directories
